<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_bluetooth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sonatest.ults100.Bluetooth"
    android:background="@drawable/blue">

    <Button
        android:id="@+id/btnOnOff"
        android:text="@string/btnOnOff_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnOnOff"
        android:id="@+id/LL">

        <Button
            android:id="@+id/btnFindUnpairedDevices"
            android:text="@string/btnFindUD_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bluetooth_device_tv_text"
            android:layout_marginTop="10dp"/>

        <ListView
            android:id="@+id/lvNewDevices"
            android:layout_width="match_parent"
            android:layout_height="150dp" />

        <Button
            android:id="@+id/btnStartConnection"
            android:text="@string/btnStartCon_text"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/attention_text"/>

    </LinearLayout>

</RelativeLayout>
