<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sonatest.ults100.MainActivity">

    <Button
        android:id="@+id/bConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/bConnect_text" />

    <TextView
        android:id="@+id/tvLed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bConnect"
        android:layout_marginTop="20dp"
        android:text="@string/led_things_text" />

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLed"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbLed1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LED1" />

        <CheckBox
            android:id="@+id/cbLed2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="LED2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL2"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/received_info_text" />

        <TextView
            android:id="@+id/receivedTV"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:drawable/divider_horizontal_textfield"
            android:textColor="@color/siyah"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LL3"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/board_settings_text" />

        <Button
            android:id="@+id/bConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bConfig_text" />

        <Button
            android:id="@+id/bDrawGraphics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/draw_button_text" />

        <Button
            android:id="@+id/bSettingReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ayarları Sıfırla" />

    </LinearLayout>


</RelativeLayout>
